# credential-service

./: .gitignore  .sops.yaml  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: test.yml
allowlist/: BUILD.bazel  allowlist.go  allowlist_test.go
authn/: README.md
authn/localjwt/: BUILD.bazel  localjwt.go
azure/azjwt/: BUILD.bazel  azjwt.go
cmd/server/: BUILD.bazel  README.md  main.go
cmd/server/configs/: dev.conf  local.conf  local.conf.sample
cmd/server/configs/allowlists/: dev.enc.json  example.json  local.enc.json
cmd/server/configs/secrets/: dev.enc.json  local.enc.json
cmd/server/testcredsrv/: BUILD.bazel  testcredsrv.go
cmd/server/usersrv/: BUILD.bazel  usersrv.go  usrsrv_test.go
cmd/tools/genjwt/: BUILD.bazel  main.go
cmd/tools/keygen/: BUILD.bazel  main.go
emailctx/: BUILD.bazel  emailctx.go
flagext/: BUILD.bazel  flagext.go
frontend/: .gitignore  .prettierignore  README.md  auth.json.sample  index.html  package-lock.json  package.json
frontend/src/: AuthModule.ts  Constants.ts  GraphResponseTypes.ts  UIManager.ts  main.ts
httpreq/: BUILD.bazel  httpreq.go
keyutil/: BUILD.bazel
openapi/: BUILD.bazel  testcreds.yaml  user.yaml
scripts/: BUILD.bazel  run_server.sh
secrets/: BUILD.bazel  secrets.go
siteverify/: BUILD.bazel  siteverify.go
tokenctx/: BUILD.bazel  tokenctx.go
