load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "secrets",
    srcs = ["secrets.go"],
    importpath = "github.com/RMI/credential-service/secrets",
    visibility = ["//visibility:public"],
    deps = [
        "//keyutil",
        "@com_github_getsops_sops_v3//decrypt",
    ],
)
