load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/RMI/credential-service/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//allowlist",
        "//authn/localjwt",
        "//azure/azjwt",
        "//cmd/server/testcredsrv",
        "//cmd/server/usersrv",
        "//flagext",
        "//httpreq",
        "//openapi:testcreds_generated",
        "//openapi:user_generated",
        "//secrets",
        "@com_github_deepmap_oapi_codegen//pkg/chi-middleware",
        "@com_github_getkin_kin_openapi//openapi3filter",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_github_go_chi_httprate//:httprate",
        "@com_github_go_chi_jwtauth_v5//:jwtauth",
        "@com_github_lestrrat_go_jwx_v2//jwk",
        "@com_github_namsral_flag//:flag",
        "@com_github_rs_cors//:cors",
        "@com_github_silicon_ally_zaphttplog//:zaphttplog",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "configs",
    srcs = glob(["configs/**"]),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "configs_tar",
    srcs = [":configs"],
    package_dir = "/configs",
    strip_prefix = "/cmd/server/configs",
)

pkg_tar(
    name = "server_tar",
    srcs = [":server"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/server"],
    tars = [
        ":server_tar",
        ":configs_tar",
    ],
)

oci_push(
    name = "push_image",
    image = ":image",
    remote_tags = ["latest"],
    repository = "rmicredsrv.azurecr.io/credsrv",
)

# Note: This tarball is provided for local testing of the Docker image, see the README.md for details on usage.
oci_tarball(
    name = "image_tarball",
    image = ":image",
    repo_tags = [],
)
